kubernetes/kube-system/cilium/dragonfly-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-netpol
  namespace: dragonfly
spec:
  endpointSelector:
    matchLabels:
      app: dragonfly
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: app
        app: backend
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
